Added canvas-things skeleton
Shows how to do particle-system style update/drawing

--- a/playgrounds/index.html
+++ b/playgrounds/index.html
@@ -12,7 +12,7 @@
 
   <main class="fullHeight">
     <header>
-      <a href="../">../</a> starters
+      <a href="../">../</a> playgrounds
     </header>
     <section>
       <div>
