--- a/starters/index.html
+++ b/starters/index.html
@@ -24,7 +24,13 @@
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/starter/canvas"></a>
-            <a href="./canvas/">canvas</a>
+            <a href="./canvas/">canvas</a>: Canvas that fills the viewport and continually redraws based on state.
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/starter/canvas-things"></a>
+            <a href="./canvas-things/">canvas-things</a>: Canvas that fills the viewport and continually redraws a set
+            of
+            things. Useful for particle effects.
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/statemachine-starter"></a>
