--- a/camera/index.html
+++ b/camera/index.html
@@ -36,6 +36,11 @@
             frame
             <div class="techniques">Pixel processing, drawing ImageData</div>
           </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/camera/pixels-worker"></a>
+            <a href="./pixels-worker/">pixels-worker</a>: Process frames in a worker thread for improved performance.
+            <div class="techniques">Pixel processing, worker thread, averaging</div>
+          </li>
         </ul>
       </div>
     </div>
