playground for drv2605

--- a/playgrounds/index.html
+++ b/playgrounds/index.html
@@ -10,14 +10,13 @@
 
 <body>
 
-  <main class="fullHeight">
+  <main>
     <header>
       <a href="../">../</a> playgrounds
     </header>
     <section>
       <div>
-
-        <p>Playgrounds are meant for running in the browser to try things out. The code is not meant to be built upon.
+        <p>Playgrounds are for trying things out. The code is not meant to be built upon.
         </p>
       </div>
       <div>
@@ -28,8 +27,8 @@
           </li>
           <li>
             <a href="./io/espruino-plot">espruino-plot</a>: Plot data from Espruino
-
           </li>
+          <li><a href="./io/espruino-drv2605/">espruino-drv2605</a>: Haptic motor</li>
         </ul>
       </div>
     </section>
