--- a/io/index.html
+++ b/io/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <main class="fullHeight">
+  <main>
     <header>
       <a href="../">../</a> input output
     </header>
@@ -39,7 +39,8 @@
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/espruino/drv2605"></a>
-            <a href="./espruino/drv2605/">drv2605</a>: haptic motor controller (Espruino Pico)
+            <a href="./espruino/drv2605/">drv2605</a>: haptic motor controller (Espruino Pico). See also the <a
+              href="../../playgrounds/io/espruino-drv2605/">DRV2605 playground</a>.
           </li>
         </ul>
       </div>
@@ -74,6 +75,8 @@
         <h1>playgrounds</h1>
         <ul class="nobullets">
           <li><a href="../playgrounds/io/espruino-repl/">espruino-repl</a>: Run lines of code on an Espruino</li>
+          <li><a href="../playgrounds/io/espruino-plot/">espruino-plot</a>: Plot data</li>
+          <li><a href="../playgrounds/io/espruino-drv2605/">espruino-drv2605</a>: Haptic motor</li>
         </ul>
       </div>
     </div>
