geometry\point-centroid demo

--- a/geometry/index.html
+++ b/geometry/index.html
@@ -86,12 +86,12 @@
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/grid-dom"></a>
-            <a href="./grid-dom/">Grid DOM</a>
+            <a href="./grid-dom/">DOM</a>
             <div class="techniques">Generate DIVs based on grid cells</div>
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/grid-canvas"></a>
-            <a href="./grid-canvas/">Grid Canvas</a>
+            <a href="./grid-canvas/">Canvas</a>
             <div class="techniques">Draw elements based on grid cells, modulator-per-cell</div>
           </li>
           <!-- <li><a href="#">Dispersion</a></li>
@@ -109,12 +109,12 @@
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/polar-spiral"></a>
-            <a href="./polar-spiral/">Polar spiral</a>
+            <a href="./polar-spiral/">Spiral</a>
             <div class="techniques">Generators, canvas paths, ping-pong</div>
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/polar-orbit"></a>
-            <a href="./polar-orbit/">Polar orbit</a>
+            <a href="./polar-orbit/">Orbit</a>
             <div class="techniques">Move an element in a circular orbit with polar coordinates</div>
           </li>
         </ul>
@@ -129,23 +129,28 @@
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/point-drawing"></a>
-            <a href="./point-drawing/">Point drawing</a>
+            <a href="./point-drawing/">Drawing</a>
             <div class="techniques">Canvas, points, repeat</div>
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/point-particle"></a>
-            <a href="./point-particle/">Point particle</a>
+            <a href="./point-particle/">Particle</a>
             <div class="techniques">Canvas, animating points, repeat, jitter</div>
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/point-interpolate"></a>
-            <a href="./point-interpolate/">Point interpolate</a>
+            <a href="./point-interpolate/">Interpolate</a>
             <div class="techniques">Interpolation, pointer events, relative coordinates</div>
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/point-math"></a>
-            <a href="./point-math/">Point math</a>
+            <a href="./point-math/">Math</a>
             <div class="techniques">Calculating distance, angles, relative coordinates</div>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/point-centroid"></a>
+            <a href="./point-centroid/">Centroid</a>
+            <div class="techniques">Centroid of two or more points</div>
           </li>
         </ul>
       </div>
@@ -159,17 +164,17 @@
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/line-math"></a>
-            <a href="./line-math/">Line math</a>
+            <a href="./line-math/">Math</a>
             <div class="techniques">Calculating distance, nearest point and interpolation</div>
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/line-rotation"></a>
-            <a href="./line-rotation/">Line rotation</a>
+            <a href="./line-rotation/">Rotation</a>
             <div class="techniques">Canvas, relative coordinates</div>
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/line-svg"></a>
-            <a href="./line-svg/">Line SVG</a>
+            <a href="./line-svg/">SVG</a>
             <div class="techniques">Lines, SVG, pointer events</div>
           </li>
         </ul>
@@ -184,7 +189,7 @@
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/rectangle-drawing"></a>
-            <a href="./rectangle-drawing/">Rectangle drawing</a>
+            <a href="./rectangle-drawing/">Drawing</a>
             <div class="techniques">Creating rectangles, compute corners & lines of a rectangle</div>
           </li>
         </ul>
