--- a/playgrounds/index.html
+++ b/playgrounds/index.html
@@ -23,6 +23,9 @@
 
         <ul class="nobullets">
           <li>
+            <a href="./io/pointer">pointer</a>: Pointer events
+          </li>
+          <li>
             <a href="./io/espruino-repl">espruino-repl</a>: Run lines of code on an Espruino
           </li>
           <li>
