--- a/playgrounds/index.html
+++ b/playgrounds/index.html
@@ -26,6 +26,9 @@
             <a href="./io/pointer">pointer</a>: Pointer events
           </li>
           <li>
+            <a href="./io/pointer-pen">pointer-pen</a>: Pen pointer events
+          </li>
+          <li>
             <a href="./io/espruino-repl">espruino-repl</a>: Run lines of code on an Espruino
           </li>
           <li>
