Convex hull added to centroid demo

--- a/geometry/index.html
+++ b/geometry/index.html
@@ -149,8 +149,8 @@
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/point-centroid"></a>
-            <a href="./point-centroid/">Centroid</a>
-            <div class="techniques">Centroid of two or more points</div>
+            <a href="./point-centroid-hull/">Centroid and Hull</a>
+            <div class="techniques">Centroid of two or more points, as well as enclosing shape</div>
           </li>
         </ul>
       </div>
