pointer-gesture playground

--- a/io/index.html
+++ b/io/index.html
@@ -59,6 +59,15 @@
         </ul>
       </div>
       <div>
+        <h1>pointer</h1>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/typer"></a>
+            <a href="./keyboard/typer/">typer</a>: add individual letters to the screen with key events
+          </li>
+        </ul>
+      </div>
+      <div>
         <h1>keyboard</h1>
         <ul class="nobullets">
           <li>
@@ -77,6 +86,8 @@
           <li><a href="../playgrounds/io/espruino-repl/">espruino-repl</a>: Run lines of code on an Espruino</li>
           <li><a href="../playgrounds/io/espruino-plot/">espruino-plot</a>: Plot data</li>
           <li><a href="../playgrounds/io/espruino-drv2605/">espruino-drv2605</a>: Haptic motor</li>
+          <li><a href="../playgrounds/io/pointer">pointer</a>: Pointer events</li>
+          <li><a href="../playgrounds/io/pointer-pen">pointer-pen</a>: Pen pointer events</li>
         </ul>
       </div>
     </div>
