--- a/playgrounds/index.html
+++ b/playgrounds/index.html
@@ -26,7 +26,10 @@
             <a href="./io/pointer">pointer</a>: Pointer events
           </li>
           <li>
-            <a href="./io/pointer-pen">pointer-pen</a>: Pen pointer events
+            <a href="./io/pointer-pen">pointer-pen</a>: Pen pointer events (stylus input required)
+          </li>
+          <li>
+            <a href="./io/pointer-gesture">pointer-gesture</a>: Touch gestures (touch input required)
           </li>
           <li>
             <a href="./io/espruino-repl">espruino-repl</a>: Run lines of code on an Espruino
