pointer-scale and pointer-visualise demos

--- a/io/index.html
+++ b/io/index.html
@@ -62,8 +62,12 @@
         <h1>pointer</h1>
         <ul class="nobullets">
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/typer"></a>
-            <a href="./keyboard/typer/">typer</a>: add individual letters to the screen with key events
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/scale"></a>
+            <a href="./pointer/scale/">scale</a>: pinch-to-zoom gesture
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/visualise"></a>
+            <a href="./pointer/visualise/">visualiser</a>: for debug purposes, show pointer movements
           </li>
         </ul>
       </div>
