pointer-scale tweaks

--- a/io/index.html
+++ b/io/index.html
@@ -43,6 +43,12 @@
               href="../../playgrounds/io/espruino-drv2605/">DRV2605 playground</a>.
           </li>
         </ul>
+        <h2>playgrounds</h2>
+        <ul class="nobullets">
+          <li><a href="../playgrounds/io/espruino-repl/">espruino-repl</a>: Run lines of code on an Espruino</li>
+          <li><a href="../playgrounds/io/espruino-plot/">espruino-plot</a>: Plot data</li>
+          <li><a href="../playgrounds/io/espruino-drv2605/">espruino-drv2605</a>: Haptic motor</li>
+        </ul>
       </div>
       <div>
         <h1>arduino</h1>
@@ -57,6 +63,7 @@
             <a href="./arduino/led-pwm/">led-pwm</a>: control a LED
           </li>
         </ul>
+
       </div>
       <div>
         <h1>pointer</h1>
@@ -70,6 +77,12 @@
             <a href="./pointer/visualise/">visualiser</a>: for debug purposes, show pointer movements
           </li>
         </ul>
+        <h2>playgrounds</h2>
+        <ul class="nobullets">
+          <li><a href="../playgrounds/io/pointer">pointer</a>: Pointer events</li>
+          <li><a href="../playgrounds/io/pointer-gesture">gesture</a>: Touch gestures</li>
+          <li><a href="../playgrounds/io/pointer-pen">pointer-pen</a>: Pen pointer events</li>
+        </ul>
       </div>
       <div>
         <h1>keyboard</h1>
@@ -82,16 +95,6 @@
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/cursor"></a>
             <a href="./keyboard/cursor/">cursor</a>: move an element around with the cursor keys
           </li>
-        </ul>
-      </div>
-      <div>
-        <h1>playgrounds</h1>
-        <ul class="nobullets">
-          <li><a href="../playgrounds/io/espruino-repl/">espruino-repl</a>: Run lines of code on an Espruino</li>
-          <li><a href="../playgrounds/io/espruino-plot/">espruino-plot</a>: Plot data</li>
-          <li><a href="../playgrounds/io/espruino-drv2605/">espruino-drv2605</a>: Haptic motor</li>
-          <li><a href="../playgrounds/io/pointer">pointer</a>: Pointer events</li>
-          <li><a href="../playgrounds/io/pointer-pen">pointer-pen</a>: Pen pointer events</li>
         </ul>
       </div>
     </div>
