Added keys playground

--- a/io/index.html
+++ b/io/index.html
@@ -96,6 +96,10 @@
             <a href="./keyboard/cursor/">cursor</a>: move an element around with the cursor keys
           </li>
         </ul>
+        <h2>playgrounds</h2>
+        <ul class="nobullets">
+          <li><a href="../playgrounds/io/keys/">keys</a>: Show key events</li>
+        </ul>
       </div>
     </div>
   </main>
