Changes for ixfx refactor

--- a/geometry/circle-path-svg/index.html
+++ b/geometry/circle-path-svg/index.html
@@ -15,6 +15,7 @@
       width: 100%;
       background-color: #FBF8F1;
       color: #54BAB9;
+      overflow: hidden;
     }
   </style>
   <svg></svg>
