--- a/modulation/easing-timer/index.html
+++ b/modulation/easing-timer/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Easing Timer</title>
-  <link rel="stylesheet" href="../../base.css">
 </head>
 <style>
   :root {
@@ -18,6 +17,7 @@
   body {
     background-color: var(--bg);
     color: var(--fg);
+    overflow: hidden;
   }
 
   body {
