--- a/modulation/env-decay/index.html
+++ b/modulation/env-decay/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Envelope decay</title>
-  <link rel="stylesheet" href="../../base.css">
 </head>
 <style>
   html,
@@ -13,6 +12,7 @@
     height: 100%;
     width: 100%;
     background-color: hsl(60, 0%, 40%);
+    overflow: hidden;
   }
 
   section {
