Added Chrome Android navigator.vibrate demo

--- a/io/index.html
+++ b/io/index.html
@@ -101,6 +101,14 @@
           <li><a href="../playgrounds/io/keys/">keys</a>: Show key events</li>
         </ul>
       </div>
+      <div>
+        <h1>etc</h1>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/vibration/"></a>
+            <a href="./vibration/">vibration</a>: Chrome Android vibration
+          </li>
+      </div>
     </div>
   </main>
 </body>
