ml\vision\object-detection and ml\vision\pose-detection

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
           <li> / <a href="./camera/">camera</a></li>
         </ul>
       </div>
-
+      <div>
+        <h2>machine learning</h2>
+        <ul class="nobullets">
+          <li> / <a href="./ml/vision/">computer vision</a></li>
+        </ul>
+      </div>
       <div>
         <h2>etc</h2>
         <ul class="nobullets">
