--- a/ml/vision/index.html
+++ b/ml/vision/index.html
@@ -22,7 +22,8 @@
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/vision/object-detection"></a>
-            <a class="readme" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/vision/object-detection/"></a>
+            <a class="readme"
+              href="https://github.com/ClintH/ixfx-demos/blob/main/ml/vision/object-detection/README.md"></a>
             <a href="./object-detection/">object-detection</a>: Detect around 90 common objects using the COCO-SSD
             model.
           </li>
@@ -33,6 +34,8 @@
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/vision/pose-detection"></a>
+            <a class="readme"
+              href=https://github.com/ClintH/ixfx-demos/blob/main/ml/vision/pose-detection/README.md"></a>
             <a href="./pose-detection/">pose-detection</a>:
           </li>
         </ul>
