README copy editing

--- a/ml/vision/index.html
+++ b/ml/vision/index.html
@@ -35,7 +35,7 @@
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/vision/pose-detection"></a>
             <a class="readme"
-              href=https://github.com/ClintH/ixfx-demos/blob/main/ml/vision/pose-detection/README.md"></a>
+              href="https://github.com/ClintH/ixfx-demos/blob/main/ml/vision/pose-detection/README.md"></a>
             <a href="./pose-detection/">pose-detection</a>:
           </li>
         </ul>
