ml\vision refactoring...

--- a/ml/vision/index.html
+++ b/ml/vision/index.html
@@ -36,7 +36,7 @@
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/vision/pose-detection"></a>
             <a class="readme"
               href="https://github.com/ClintH/ixfx-demos/blob/main/ml/vision/pose-detection/README.md"></a>
-            <a href="./pose-detection/">pose-detection</a>:
+            <a href="./pose-detection/">pose-detection</a>: detect key points of the human body
           </li>
         </ul>
       </div>
