--- a/ml/vision/object-detection/index.html
+++ b/ml/vision/object-detection/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>object-detecction</title>
+  <title>object-detection</title>
 </head>
 <style>
   :root {
@@ -63,7 +63,7 @@
 </style>
 
 <body>
-  <h1>object detection</h1>
+  <h1>object-detection</h1>
   <p id="intro"> <a href="source.html" target="_blank">Start a source in a new
       window</a>, or use the panel in the corner.</p>
   <section id="sourceSection">
