--- a/ml/vision/pose-detection/index.html
+++ b/ml/vision/pose-detection/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>pose-detecction</title>
+  <title>pose-detection</title>
 </head>
 <style>
   :root {
