--- a/ml/vision/pose-detection/source.html
+++ b/ml/vision/pose-detection/source.html
@@ -10,7 +10,7 @@
   :root {
     --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     --mono-font: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
-    --hue: 260;
+    --hue: 200;
     --bg: hsl(var(--hue) 64% 5%);
     --bg-overlay: hsla(var(--hue) 64% 5% / 0.5);
     --button-bg: hsl(var(--hue) 64% 17%);
@@ -21,10 +21,11 @@
 
   html,
   body {
-    font-family: var(--font);
+    box-sizing: border-box;
   }
 
   body {
+    font-family: var(--font);
     margin: 0;
     background-color: var(--bg);
     color: var(--fg);
@@ -33,52 +34,16 @@
     overflow: hidden;
   }
 
-  .overlay {
+  .overlay,
+  .cs-ui {
     background-color: var(--bg-overlay);
-    padding: 1em;
-  }
-
-  .overlay>div {
-    margin-bottom: 1em;
-  }
-
-  button {
-    margin-right: 2em;
-    padding: 0.3em;
+    padding-left: 1em;
+    padding-top: 1em;
   }
 
   h1 {
     font-size: 1.1em;
     margin: 0;
-  }
-
-  .ixfx-capture {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    aspect-ratio: 640 / 480;
-    width: 100vw;
-  }
-
-  #data {
-    position: fixed;
-    bottom: 0;
-    font-family: var(--mono-font);
-    padding: 1em;
-    min-width: 6em;
-  }
-
-  #controls h2 {
-    text-transform: uppercase;
-    font-size: 0.6em;
-    letter-spacing: 0.05em;
-    display: inline-block;
-    width: 5em;
-  }
-
-  #controls>div {
-    padding-bottom: 0.3em;
   }
 
   @media (max-width: 600px) {
@@ -94,26 +59,11 @@
 
 <body>
   <div class="overlay">
-    <h1>pose-detection source</h1>
-    <div id="lblStatus"></div>
-    <div id="controls" style="display:none">
-      <div>
-        <h2>Camera</h2>
-        <button disabled id="btnCameraStart">Start</button> <button disabled id="btnCameraStop">Stop</button>
-      </div>
-      <div>
-        <h2>Display</h2>
-        <label><input id="chkCameraShow" type="checkbox"> Data </label>
-        <label><input id="chkCameraShow" type="checkbox"> Video </label>
-        <button id="btnFreeze">Freeze</button>
-      </div>
-    </div>
+    <h1>pose-detection</h1>
   </div>
-
-  <div class="overlay" id="data"></div>
-  <canvas id="buffer"></canvas>
   <script type="module" src="source.js"></script>
 
+  <!-- Always needed -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-core"></script>
 
   <!-- For tfjs runtime -->
