ml\vision\pose smoothing

--- a/ml/vision/index.html
+++ b/ml/vision/index.html
@@ -42,8 +42,8 @@
         <ul class="nobullets">
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/ml/vision/pose/points.js"></a>
-            <a href="./pose/points.html">points</a>: demonstrates working with normalised key points,
-            visualising them on a canvas.
+            <a href="./pose/points.html">points</a>: demonstrates working with normalised key points, smoothing them and
+            visualising on a canvas.
           </li>
           <li>
             <a class="source"
