--- a/ml/vision/pose/points.html
+++ b/ml/vision/pose/points.html
@@ -68,7 +68,8 @@
   <h1>pose / points</h1>
   <p id="intro"> <a href="source.html" target="_blank">Start a source in a new
       window</a>, or click the yellow tick in the corner panel.</p>
-  <p>This just demonstrates using relative key points received from a source.</p>
+  <p>This just demonstrates using relative key points received from a source, and applying interpolation for smoothing.
+  </p>
   <!-- If you're not using the panel, comment-out these lines... -->
   <button id="btnCloseFrame">Stop corner source</button>
   <section id="sourceSection">
