--- a/geometry/circle-path-svg/index.html
+++ b/geometry/circle-path-svg/index.html
@@ -13,7 +13,7 @@
     html {
       height: 100%;
       width: 100%;
-      background-color: #FBF8F1;
+      background-color: black;
       color: #54BAB9;
       overflow: hidden;
     }
