Further updates of ml\vision

--- a/ml/vision/index.html
+++ b/ml/vision/index.html
@@ -47,6 +47,13 @@
           </li>
           <li>
             <a class="source"
+              href="https://github.com/ClintH/ixfx-demos/tree/main/ml/vision/pose/points-multiple-sources.js"></a>
+            <a href="./pose/points-multiple-sources.html">points-multiple-sources</a>: an extension of the
+            <em>points</em> demo,
+            showing how to handle data from several sources.
+          </li>
+          <li>
+            <a class="source"
               href="https://github.com/ClintH/ixfx-demos/tree/main/ml/vision/pose/point-to-point.js"></a>
             <a href="./pose/point-to-point.html">point-to-point</a>: demonstrates calculating geometric
             relation between two parts of the body
