--- a/ml/vision/pose/point-to-point.html
+++ b/ml/vision/pose/point-to-point.html
@@ -57,7 +57,7 @@
   <p>Demonstration of calculating some basic geometric relations between parts of the body.</p>
 
   <!-- If you're not using the panel, comment-out these lines... -->
-  <button id="btnCloseFrame">Stop corner source</button>
+  <button id="btnCloseFrame">Close corner source</button>
   <section id="sourceSection">
     <iframe src="source.html"></iframe>
   </section>
