--- a/ml/vision/object/objects.html
+++ b/ml/vision/object/objects.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>object-detection</title>
+  <title>object / objects</title>
 </head>
 <style>
   :root {
@@ -29,27 +29,11 @@
     padding: 1em;
   }
 
-  .button {
-    border: 1px solid var(--fg);
-    padding: var(--padding);
-    background-color: hsl(var(--hue) 64% 77%);
-    color: var(--fg);
-    transition: all ease-out 0.5s;
-  }
-
-  .button:hover {
-    background-color: hsl(var(--hue) 64% 37%);
-    color: var(--bg);
-    transition: all ease-in 0.3s;
-  }
-
-  .button:link {
-    text-decoration: none;
-  }
-
   #sourceSection {
-    width: 20vw;
-    height: 20vw;
+    max-width: 320px;
+    max-height: 240px;
+    aspect-ratio: 320 / 240;
+    height: 30vw;
     position: absolute;
     right: 0;
     top: 0;
@@ -63,13 +47,13 @@
 </style>
 
 <body>
-  <h1>object-detection</h1>
+  <h1>object / objects</h1>
   <p id="intro"> <a href="source.html" target="_blank">Start a source in a new
       window</a>, or use the panel in the corner.</p>
   <section id="sourceSection">
     <iframe src="source.html"></iframe>
   </section>
-  <script type="module" src="index.js"></script>
+  <script type="module" src="objects.js"></script>
   <canvas id="canvas"></canvas>
 </body>
 
