--- a/ml/vision/pose/points.html
+++ b/ml/vision/pose/points.html
@@ -29,24 +29,6 @@
     padding: 1em;
   }
 
-  .button {
-    border: 1px solid var(--fg);
-    padding: var(--padding);
-    background-color: hsl(var(--hue) 64% 77%);
-    color: var(--fg);
-    transition: all ease-out 0.5s;
-  }
-
-  .button:hover {
-    background-color: hsl(var(--hue) 64% 37%);
-    color: var(--bg);
-    transition: all ease-in 0.3s;
-  }
-
-  .button:link {
-    text-decoration: none;
-  }
-
   #sourceSection {
     max-width: 320px;
     max-height: 240px;
@@ -68,10 +50,14 @@
   <h1>pose / points</h1>
   <p id="intro"> <a href="source.html" target="_blank">Start a source in a new
       window</a>, or click the yellow tick in the corner panel.</p>
-  <p>This just demonstrates using relative key points received from a source, and applying interpolation for smoothing.
+  <p>This demonstrates using a single pose, mapping relative key points to screen coordinates, interpolating for reduce
+    glitchiness and drawing on the canvas. See <a href="points-multiple-sources.html">points-multiple-sources</a> for
+    handling
+    multiple sources.
   </p>
+
   <!-- If you're not using the panel, comment-out these lines... -->
-  <button id="btnCloseFrame">Stop corner source</button>
+  <button id="btnCloseFrame">Close corner source</button>
   <section id="sourceSection">
     <iframe src="source.html"></iframe>
   </section>
