Sketch updates for new style

--- a/modulation/oscillator-starter/index.html
+++ b/modulation/oscillator-starter/index.html
@@ -6,12 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Oscillator starter</title>
 </head>
+<style>
+  #thing {
+    font-size: 3em;
+    position: fixed;
+
+  }
+</style>
 
 <body>
   <h1>Oscillator starter</h1>
   <p>A lightweight sketch to get you started with oscillators.</p>
   <div id="oscValue">?</div>
-  <script type="module" src="script.js"></script>
+  <div id="thing">🐨<div>
+      <script type="module" src="script.js"></script>
 </body>
 
 </html>
