Fixed a few Safari bugs, and added io/pointer/force demo

--- a/io/index.html
+++ b/io/index.html
@@ -73,15 +73,19 @@
             <a href="./pointer/scale/">scale</a>: pinch-to-zoom gesture
           </li>
           <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/force"></a>
+            <a href="./pointer/force/">force</a>: pressure/force
+          </li>
+          <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/pointer/visualise"></a>
             <a href="./pointer/visualise/">visualiser</a>: for debug purposes, show pointer movements
           </li>
         </ul>
         <h2>playgrounds</h2>
         <ul class="nobullets">
-          <li><a href="../playgrounds/io/pointer">pointer</a>: Pointer events</li>
-          <li><a href="../playgrounds/io/pointer-gesture">gesture</a>: Touch gestures</li>
-          <li><a href="../playgrounds/io/pointer-pen">pointer-pen</a>: Pen pointer events</li>
+          <li><a href="../playgrounds/io/pointer/">pointer</a>: Pointer events</li>
+          <li><a href="../playgrounds/io/pointer-gesture/">gesture</a>: Touch gestures</li>
+          <li><a href="../playgrounds/io/pointer-pen/">pointer-pen</a>: Pen pointer events</li>
         </ul>
       </div>
       <div>
