--- a/playgrounds/io/pointer-pen/index.html
+++ b/playgrounds/io/pointer-pen/index.html
@@ -43,6 +43,7 @@
     flex-direction: column;
     touch-action: none;
     user-select: none;
+    -webkit-user-select: none;
     align-items: center;
     justify-content: center;
     width: 20vw;
