--- a/io/pointer/force/index.html
+++ b/io/pointer/force/index.html
@@ -5,24 +5,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, user-scalable=no">
 
-  <title>pointer scale</title>
+  <title>force</title>
   <script src="./script.js" type="module"></script>
 </head>
 
 <body>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=League+Spartan&display=swap');
-
     :root {
-      --hue: 280;
-      --bg: hsl(var(--hue), 50%, 10%);
-      --fg: hsl(var(--hue), 20%, 80%);
+      --hue: 100;
+      --bg: hsl(var(--hue), 50%, 90%);
+      --fg: hsl(var(--hue), 20%, 20%);
     }
 
     body {
       color: var(--fg);
       background-color: var(--bg);
-      font-family: 'League Spartan', sans-serif;
       touch-action: none;
       overflow: hidden;
       user-select: none;
@@ -44,14 +41,28 @@
     header {
       margin: 1em;
     }
+
+    #thing {
+      border: 3px solid var(--fg);
+      padding: 3em;
+      background-color: hsl(var(--hue), 0%, 50%);
+    }
   </style>
   <header>
-    <h1>pointer scale</h1>
-    <p>Demonstrate a 'pinch to zoom' style gesture (only for touch</p>
-
+    <h1>pointer force</h1>
+    <p>With an Apple trackpad or pressure-sensitive stylus, try applying varying force in the square below.</p>
+    <div>
+      Webkit force: <span id="webkitForce">?</span>
+    </div>
+    <div>
+      Pointer pressure: <span id="pointerPressure">?</span>
+    </div>
+    <div>
+      Normalised: <span id="normalised">?</span>
+    </div>
   </header>
   <section id="container">
-    <div id="thing">Hello.</div>
+    <div id="thing"></div>
   </section>
 </body>
 
